--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,120 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.text-main {
+  color:#ff5b38 !important;
+}
+
+.bg-main{
+  background-color: #ff5b38 !important;
+}
+.outline-none{
+  outline: none !important;
+}
+.border-main{
+  border-color: #ff5b38;
+  border-style: solid;
+}
+img{
+  object-fit: fill;
+}
+
+/* card Img */
+.cardImg{height: 230px;
+}
+@media screen and (max-width: 560px){.cardImg{height: 150px;}}
+
+/* slider controls style */
+
+div.swiper-button-next, div.swiper-button-prev{
+  top: auto;
+  bottom: 0;
+  z-index: 99;
+  margin: 0 14%;
+}
+
+div.swiper-button-next::after, div.swiper-button-prev::after{
+  color:#ff5b38;
+  font-weight: 900;
+  font-size: 2.2rem;
+
+  
+}
+
+div.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal
+{ bottom: 9px; ;}
+div.swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets.swiper-pagination-horizontal > span.swiper-pagination-bullet{
+  background:#ff5b38;
+  width: 12px;
+height: 12px
+
+ }
+
+ .py-7{
+  padding: 60px 0 !important;
+ }
+
+ /* radio inputs  style*/
+
+ .contain {
+  /* display: block; */
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.contain input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.contain:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.contain input:checked ~ .checkmark {
+  background-color: #ff5b38;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.contain input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.contain .checkmark:after {
+ 	top: 6px;
+	left: 6px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
 }
